--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html> 
-
+<head>
+	<link rel="stylesheet" 
+	href="stylesheet.CSS">
+	<title> Welcome to my page </title>
+</head>
 <body> 
 
 <h1> Welcome to my page </h1> 
